objects/AdobeCampaign__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings maintains list of Adobe Campaign</description>
    <fields>
        <fullName>AdobeFieldName__c</fullName>
        <description>Adobe Field Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Adobe Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdobeSchemaName__c</fullName>
        <description>Adobe Schema Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AdobeSchemaName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerafinaFieldName__c</fullName>
        <description>Terafina Field Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TerafinaFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerafinaObjectName__c</fullName>
        <description>Terafina Object Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TerafinaObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AdobeCampaign</label>
</CustomObject>